--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+
+:root {
+    --primary: #094b65;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html , body{
-    height: 100%;
-    width: 100%;
-    background-color: gray;
+body {
+    overflow-x: hidden;
+    background: #cacaca;
+    min-height: 100vh;
+    
 }
 
 #header {
@@ -137,4 +143,9 @@ footer {
 footer a {
     text-decoration: none;
     color: #fff;
+}
+#pg3{
+    min-height: 100vh;
+    width: 100%;
+    background-color: red;
 }
